--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
                 </div>
                 <div class="menu__item"><a href="#"><i class="fa fa-book"></i><span
                             class="menu-item">Documents</span></a></div>
-                <div class="menu__item"><a href="#"><i class="fa fa-code"></i><span class="menu-item">Code</span></a>
+                <div class="menu__item">
+                    <a href="#">
+                        <i class="fa fa-code"></i>
+                        <span class="menu-item">Code</span>
+                        <i class="fa fa-chevron-right sub-icon"></i>
+                    </a>
                     <div class="sub-menu">
                         <div class="sub-menu__item"><a href="">C#</a></div>
                         <div class="sub-menu__item"><a href="">PHP</a></div>
@@ -38,7 +43,12 @@
                 </div>
                 <div class="menu__item"><a href="#"><i class="fa fa-code"></i><span
                             class="menu-item">Newspaper</span></a></div>
-                <div class="menu__item"><a href="#"><i class="fa fa-heart"></i><span class="menu-item">Arduino</span></a>
+                <div class="menu__item">
+                    <a href="#">
+                        <i class="fa fa-heart"></i>
+                        <span class="menu-item">Arduino</span>
+                            <i class="fa fa-chevron-right sub-icon"></i>
+                        </a>
                     <div class="sub-menu">
                         <div class="sub-menu__item"><a href="">Cảm biến chuyển động</a></div>
                         <div class="sub-menu__item"><a href="">Xe tránh vật cản</a></div>
