--- a/page.html
+++ b/page.html
@@ -13,14 +13,103 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
-    <div class="page">
-        <a href=""><li class="active">1</li></a>
-        <a href=""><li>2</li></a>
-        <a href=""><li>3</li></a>
-        <a href=""><li>4</li></a>
-        <a href=""><li>5</li></a>
-        <a href=""><li>6</li></a>
+    <div class="news">
+        <div class="news__heading"><span>Các tin nổi bật</span></div>
+        <div class="news__menu">
+            <div class="news__menu--item">Tất cả</div>
+            <div class="news__menu--item">Sự kiện</div>
+            <div class="news__menu--item">Hoạt động</div>
+            <div class="news__menu--item">Giải đấu</div>
+        </div>
+        <div class="news__item__group row">
+            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
+                <div class="bg__dark">
+                    <img class="news__item--image" src="./images/news1.jpg" alt="">
+                    <div class="news__item--date">26/01/2021</div>
+                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
+                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
+                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
+                <div class="bg__dark">
+                    <img class="news__item--image" src="./images/news2.jpg" alt="">
+                    <div class="news__item--date">26/01/2021</div>
+                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
+                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
+                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
+                <div class="bg__dark">
+                    <img class="news__item--image" src="./images/news3.jpg" alt="">
+                    <div class="news__item--date">26/01/2021</div>
+                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
+                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
+                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
+                <div class="bg__dark">
+                    <img class="news__item--image" src="./images/news4.jpg" alt="">
+                    <div class="news__item--date">26/01/2021</div>
+                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
+                    <div class="news__item--desc">Lorem ipuptates eum molestiae ut? Lorem ipsum dolor sit amet
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
+                <div class="bg__dark">
+                    <img class="news__item--image" src="./images/news5.jpg" alt="">
+                    <div class="news__item--date">26/01/2021</div>
+                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
+                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
+                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+                    </div>
+                </div>
+            </a>
+            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
+                <div class="bg__dark">
+                    <img class="news__item--image" src="./images/news6.jpg" alt="">
+                    <div class="news__item--date">26/01/2021</div>
+                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
+                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
+                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="page">
+            <a href="">
+                <li class="active">1</li>
+            </a>
+            <a href="">
+                <li>2</li>
+            </a>
+            <a href="">
+                <li>3</li>
+            </a>
+            <a href="">
+                <li>4</li>
+            </a>
+            <a href="">
+                <li>5</li>
+            </a>
+            <a href="">
+                <li>6</li>
+            </a>
+        </div>
     </div>
 </body>
+
 </html>
