--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
             <div class="header__login">
                 <!-- <a href="#" >Đăng nhập</a> -->
                 <div class="noty">
+                    <i id="myBtn" class="fa fa-bell" aria-hidden="true"></i>
+                    <div class="noty__total">2</div>
+                </div>
+                <div class="noty">
+                    <i id="myBtn" class="fa fa-flag" aria-hidden="true"></i>
+                    <div class="noty__total">2</div>
+                </div>
+                <div class="noty">
                     <i id="myBtn" class="fa fa-envelope" aria-hidden="true"></i>
                     <div class="noty__total">2</div>
                 </div>
