--- a/page.html
+++ b/page.html
@@ -2,29 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Câu lạc bộ tin học</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bán bánh Tết nhà làm - Ngon như nhà làm</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <!-- Font-awesome -->
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
     <div class="news">
-        <div class="news__heading"><span>Các tin nổi bật</span></div>
-        <div class="news__menu">
+        <div class="container">
+            
+
+            <div class="__footer row" id="contact">
+                <a class="social col-lg-6 col-sm-12" href="https://www.facebook.com/hieukyo291199">
+                    <div class="social__link">
+                        <img src="https://play-lh.googleusercontent.com/ccWDU4A7fX1R24v-vvT480ySh26AYp97g1VrIB_FIdjRcuQB2JP2WdY7h_wVVAeSpg=s180-rw">
+                        <span class="social--title">Facebook | Nhắn tin để đặt hàng</span>
+                    </div>
+                </a>
+                <a class="social col-lg-6 col-sm-12" href="https://zalo.me/0915291199">
+                    <div class="social__link">
+                        <img src="https://play-lh.googleusercontent.com/rFIOt4fDSCgJh_FkHU2qP8YiZUUhfVoKoNfQFbPEM-Wl8zuyuwn7vzkEx_XMh5B6FfO3=s180-rw">
+                        <span class="social--title">Zalo | Nhắn tin để đặt hàng</span>
+                    </div>
+                </a>
+            </div>
+            <div class="news__heading">
+                <span>Bán bánh Tết nhà làm</span>
+                <span>Ngon như nhà làm</span>
+            </div>
+            <!-- <div class="news__menu">
             <div class="news__menu--item">Tất cả</div>
             <div class="news__menu--item">Sự kiện</div>
             <div class="news__menu--item">Hoạt động</div>
             <div class="news__menu--item">Giải đấu</div>
-        </div>
-        <div class="news__item__group row">
-            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
+        </div> -->
+            <div class="news__item__group row">
+                <!-- <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
                 <div class="bg__dark">
                     <img class="news__item--image" src="./images/news1.jpg" alt="">
                     <div class="news__item--date">26/01/2021</div>
@@ -34,80 +54,84 @@
                         excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
                     </div>
                 </div>
-            </a>
-            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
-                <div class="bg__dark">
-                    <img class="news__item--image" src="./images/news2.jpg" alt="">
-                    <div class="news__item--date">26/01/2021</div>
-                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
-                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
-                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+            </a> -->
+                <div class="news__item col-lg-4 col-md-6 col-sm-6">
+                    <div class="bg__dark">
+                        <img class="news__item--image" src="https://cf.shopee.vn/file/1acf6bb171fb4ed517083d88ee5e5dd5"
+                            alt="" />
+                        <div class="news__item--date"></div>
+                        <div class="news__item--title">Bánh quai dạt</div>
+                        <div class="news__item--desc">130.000đ/kg</div>
+                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
-            </a>
-            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
-                <div class="bg__dark">
-                    <img class="news__item--image" src="./images/news3.jpg" alt="">
-                    <div class="news__item--date">26/01/2021</div>
-                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
-                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
-                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+                <div class="news__item col-lg-4 col-md-6 col-sm-6">
+                    <div class="bg__dark">
+                        <img class="news__item--image" src="https://cf.shopee.vn/file/f77553709427cffab2ae0db737cb0c45"
+                            alt="" />
+                        <div class="news__item--date"></div>
+                        <div class="news__item--title">Bánh bông mai</div>
+                        <div class="news__item--desc">130.000đ/kg</div>
+                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
-            </a>
-            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
-                <div class="bg__dark">
-                    <img class="news__item--image" src="./images/news4.jpg" alt="">
-                    <div class="news__item--date">26/01/2021</div>
-                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
-                    <div class="news__item--desc">Lorem ipuptates eum molestiae ut? Lorem ipsum dolor sit amet
+                <div class="news__item col-lg-4 col-md-6 col-sm-6">
+                    <div class="bg__dark">
+                        <img class="news__item--image" src="https://i.ytimg.com/vi/JbuYhdE5b78/hqdefault.jpg" alt="" />
+                        <div class="news__item--date"></div>
+                        <div class="news__item--title">
+                            Bánh bông lan truyền thống
+                        </div>
+                        <div class="news__item--desc">
+                            130.000đ/ 100 cái
+                        </div>
+                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
-            </a>
-            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
-                <div class="bg__dark">
-                    <img class="news__item--image" src="./images/news5.jpg" alt="">
-                    <div class="news__item--date">26/01/2021</div>
-                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
-                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
-                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+                <div class="news__item col-lg-4 col-md-6 col-sm-6">
+                    <div class="bg__dark">
+                        <img class="news__item--image"
+                            src="https://img-global.cpcdn.com/recipes/f5068c20462c593a/751x532cq70/banh-b%E1%BB%99t-d%E1%BA%ADu-recipe-main-photo.jpg"
+                            alt="" />
+                        <div class="news__item--date"></div>
+                        <div class="news__item--title">Bánh hột đậu</div>
+                        <div class="news__item--desc">130.000đ/kg</div>
+                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
-            </a>
-            <a href="#" class="news__item col-lg-4 col-md-6 col-sm-6">
-                <div class="bg__dark">
-                    <img class="news__item--image" src="./images/news6.jpg" alt="">
-                    <div class="news__item--date">26/01/2021</div>
-                    <div class="news__item--title">Đá bóng ngoài net - Nhận quà căng đét</div>
-                    <div class="news__item--desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
-                        possimus totam, hic iure quis rerum quasi laborum placeat! Quisquam aliquam commodi assumenda
-                        excepturi nihil accusamus quibusdam voluptates eum molestiae ut? Lorem ipsum dolor sit amet
+                <div class="news__item col-lg-4 col-md-6 col-sm-6">
+                    <div class="bg__dark">
+                        <img class="news__item--image"
+                            src="https://scontent.fvca1-2.fna.fbcdn.net/v/t1.0-9/144266700_1126140654481264_385097594340297882_o.jpg?_nc_cat=101&ccb=2&_nc_sid=730e14&_nc_ohc=NnHw0PCiC9oAX8nYE7k&_nc_ht=scontent.fvca1-2.fna&oh=df78eb55fe811b417c44c02dd69be211&oe=60428FA3"
+                            alt="" />
+                        <div class="news__item--date"></div>
+                        <div class="news__item--title">Bánh khóm</div>
+                        <div class="news__item--desc">180.000đ/kg</div>
+                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
-            </a>
-        </div>
-        <div class="page">
-            <a href="">
-                <li class="active">1</li>
-            </a>
-            <a href="">
-                <li>2</li>
-            </a>
-            <a href="">
-                <li>3</li>
-            </a>
-            <a href="">
-                <li>4</li>
-            </a>
-            <a href="">
-                <li>5</li>
-            </a>
-            <a href="">
-                <li>6</li>
-            </a>
+            </div>
+
+            <!-- <div class="page">
+                <a href="">
+                    <li class="active">1</li>
+                </a>
+                <a href="">
+                    <li>2</li>
+                </a>
+                <a href="">
+                    <li>3</li>
+                </a>
+                <a href="">
+                    <li>4</li>
+                </a>
+                <a href="">
+                    <li>5</li>
+                </a>
+                <a href="">
+                    <li>6</li>
+                </a>
+            </div> -->
         </div>
     </div>
 </body>
