--- a/page.html
+++ b/page.html
@@ -17,18 +17,20 @@
 <body>
     <div class="news">
         <div class="container">
-            
+
 
             <div class="__footer row" id="contact">
                 <a class="social col-lg-6 col-sm-12" href="https://www.facebook.com/hieukyo291199">
                     <div class="social__link">
-                        <img src="https://play-lh.googleusercontent.com/ccWDU4A7fX1R24v-vvT480ySh26AYp97g1VrIB_FIdjRcuQB2JP2WdY7h_wVVAeSpg=s180-rw">
+                        <img
+                            src="https://play-lh.googleusercontent.com/ccWDU4A7fX1R24v-vvT480ySh26AYp97g1VrIB_FIdjRcuQB2JP2WdY7h_wVVAeSpg=s180-rw">
                         <span class="social--title">Facebook | Nhắn tin để đặt hàng</span>
                     </div>
                 </a>
                 <a class="social col-lg-6 col-sm-12" href="https://zalo.me/0915291199">
                     <div class="social__link">
-                        <img src="https://play-lh.googleusercontent.com/rFIOt4fDSCgJh_FkHU2qP8YiZUUhfVoKoNfQFbPEM-Wl8zuyuwn7vzkEx_XMh5B6FfO3=s180-rw">
+                        <img
+                            src="https://play-lh.googleusercontent.com/rFIOt4fDSCgJh_FkHU2qP8YiZUUhfVoKoNfQFbPEM-Wl8zuyuwn7vzkEx_XMh5B6FfO3=s180-rw">
                         <span class="social--title">Zalo | Nhắn tin để đặt hàng</span>
                     </div>
                 </a>
@@ -57,22 +59,22 @@
             </a> -->
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
                     <div class="bg__dark">
-                        <img class="news__item--image" src="https://cf.shopee.vn/file/1acf6bb171fb4ed517083d88ee5e5dd5"
-                            alt="" />
+                        <img class="news__item--image"
+                            src="https://f9.photo.talk.zdn.vn/5208581362142825399/d68cdd219e976ec93786.jpg" alt="" />
                         <div class="news__item--date"></div>
                         <div class="news__item--title">Bánh quai dạt</div>
                         <div class="news__item--desc">130.000đ/kg</div>
-                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="../san-pham/banh-quai-dat.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
                     <div class="bg__dark">
-                        <img class="news__item--image" src="https://cf.shopee.vn/file/f77553709427cffab2ae0db737cb0c45"
-                            alt="" />
+                        <img class="news__item--image"
+                            src="https://f16.photo.talk.zdn.vn/7761908615636543135/9432619e2228d2768b39.jpg" alt="" />
                         <div class="news__item--date"></div>
                         <div class="news__item--title">Bánh bông mai</div>
                         <div class="news__item--desc">130.000đ/kg</div>
-                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="../san-pham/banh-bong-mai.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
@@ -85,29 +87,27 @@
                         <div class="news__item--desc">
                             130.000đ/ 100 cái
                         </div>
-                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="../san-pham/banh-bong-lan-truyen-thong.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
                     <div class="bg__dark">
                         <img class="news__item--image"
-                            src="https://img-global.cpcdn.com/recipes/f5068c20462c593a/751x532cq70/banh-b%E1%BB%99t-d%E1%BA%ADu-recipe-main-photo.jpg"
-                            alt="" />
+                            src="https://f14.photo.talk.zdn.vn/5172764463511819989/65f8cb5488e278bc21f3.jpg" alt="" />
                         <div class="news__item--date"></div>
                         <div class="news__item--title">Bánh hột đậu</div>
                         <div class="news__item--desc">130.000đ/kg</div>
-                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="../san-pham/banh-hot-dau.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
                     <div class="bg__dark">
                         <img class="news__item--image"
-                            src="https://scontent.fvca1-2.fna.fbcdn.net/v/t1.0-9/144266700_1126140654481264_385097594340297882_o.jpg?_nc_cat=101&ccb=2&_nc_sid=730e14&_nc_ohc=NnHw0PCiC9oAX8nYE7k&_nc_ht=scontent.fvca1-2.fna&oh=df78eb55fe811b417c44c02dd69be211&oe=60428FA3"
-                            alt="" />
+                            src="https://f16.photo.talk.zdn.vn/1270337622367193848/0ee11d4c5efaaea4f7eb.jpg" alt="" />
                         <div class="news__item--date"></div>
                         <div class="news__item--title">Bánh khóm</div>
                         <div class="news__item--desc">180.000đ/kg</div>
-                        <a  href="#contact"  class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="../san-pham/banh-khom.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,11 @@
                     <li>6</li>
                 </a>
             </div> -->
+
         </div>
+    </div>
+    <div class="product_footer">
+        Bản quyền thuộc về <a href="http://www.facebook.com/tchiphuong" target="_blank">Phương Trần</a></p>
     </div>
 </body>
 
