change link product

--- a/banh-quai-dat.html
+++ b/banh-quai-dat.html
@@ -22,15 +22,15 @@
                 <span>Ngon như nhà làm</span>
             </div>
             <div class="product">
-                <div class="product__link"><span><a href="../page.html">Sản phẩm</a></span> / <span><a href="../san-pham/banh-bong-mai.html">Bánh bông mai</a></span></div>
+                <div class="product__link"><span><a href="../page.html">Sản phẩm</a></span> / <span><a href="banh-quai-dat.html">Bánh quai dạt</a></span></div>
                 <div class="product__caption">Chi tiết sản phẩm</div>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <!-- <img class="product__image" src="../../images/logo.png" alt=""> -->
-                        <img class="product__image" src="https://f16.photo.talk.zdn.vn/7761908615636543135/9432619e2228d2768b39.jpg" alt="">
+                        <img class="product__image" src="https://f9.photo.talk.zdn.vn/5208581362142825399/d68cdd219e976ec93786.jpg" alt="">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12">
-                        <div class="product__name">BÁNH bông mai</div>
+                        <div class="product__name">BÁNH quai dạt</div>
                         <div class="product__price">130.000đ/ kg</div>
                         <div class="product__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus incidunt architecto illum, odit accusantium nemo nostrum, delectus ipsa totam autem ratione repellat necessitatibus! Facilis non accusantium eius illo et hic?
                         </div>
@@ -55,22 +55,22 @@
             <div class="recomment">
                 <div class="recomment__caption">Sản phẩm gợi ý</div>
                 <div class="row">
-                    <a href="../san-pham/banh-quai-dat.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
-                        <img class="recomment__image" src="https://f9.photo.talk.zdn.vn/5208581362142825399/d68cdd219e976ec93786.jpg"></img>
-                        <div class="recomment__name">BÁNH QUAI DẠT</div>
+                    <a href="banh-bong-mai.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
+                        <img class="recomment__image" src="https://f16.photo.talk.zdn.vn/7761908615636543135/9432619e2228d2768b39.jpg"></img>
+                        <div class="recomment__name">BÁNH bông mai</div>
                         <div class="recomment__price">130.000đ/ký</div>
                     </a>
-                    <a href="../san-pham/banh-bong-lan-truyen-thong.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
+                    <a href="banh-bong-lan-truyen-thong.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
                         <img class="recomment__image" src="https://i.ytimg.com/vi/JbuYhdE5b78/hqdefault.jpg"></img>
                         <div class="recomment__name">BÁNH bông lan truyền thống</div>
                         <div class="recomment__price">130.000đ/ 100 cái</div>
                     </a>
-                    <a href="../san-pham/banh-khom.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
+                    <a href="banh-khom.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
                         <img class="recomment__image" src="https://f16.photo.talk.zdn.vn/1270337622367193848/0ee11d4c5efaaea4f7eb.jpg"></img>
                         <div class="recomment__name">BÁNH khóm</div>
                         <div class="recomment__price">180.000đ/ký</div>
                     </a>
-                    <a href="../san-pham/banh-hot-dau.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
+                    <a href="banh-hot-dau.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
                         <img class="recomment__image" src="https://f14.photo.talk.zdn.vn/5172764463511819989/65f8cb5488e278bc21f3.jpg"></img>
                         <div class="recomment__name">BÁNH HỘT ĐẬU</div>
                         <div class="recomment__price">130.000đ/ký</div>
