--- a/page.html
+++ b/page.html
@@ -64,7 +64,7 @@
                         <div class="news__item--date"></div>
                         <div class="news__item--title">Bánh quai dạt</div>
                         <div class="news__item--desc">130.000đ/kg</div>
-                        <a href="../san-pham/banh-quai-dat.html" class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="banh-quai-dat.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
@@ -74,7 +74,7 @@
                         <div class="news__item--date"></div>
                         <div class="news__item--title">Bánh bông mai</div>
                         <div class="news__item--desc">130.000đ/kg</div>
-                        <a href="../san-pham/banh-bong-mai.html" class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="banh-bong-mai.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
@@ -87,7 +87,7 @@
                         <div class="news__item--desc">
                             130.000đ/ 100 cái
                         </div>
-                        <a href="../san-pham/banh-bong-lan-truyen-thong.html" class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="banh-bong-lan-truyen-thong.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
@@ -97,7 +97,7 @@
                         <div class="news__item--date"></div>
                         <div class="news__item--title">Bánh hột đậu</div>
                         <div class="news__item--desc">130.000đ/kg</div>
-                        <a href="../san-pham/banh-hot-dau.html" class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="banh-hot-dau.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
                 <div class="news__item col-lg-4 col-md-6 col-sm-6">
@@ -107,7 +107,7 @@
                         <div class="news__item--date"></div>
                         <div class="news__item--title">Bánh khóm</div>
                         <div class="news__item--desc">180.000đ/kg</div>
-                        <a href="../san-pham/banh-khom.html" class="news__item--btn">Đặt hàng ngay</a>
+                        <a href="banh-khom.html" class="news__item--btn">Đặt hàng ngay</a>
                     </div>
                 </div>
             </div>
