--- a/banh-bong-lan-truyen-thong.html
+++ b/banh-bong-lan-truyen-thong.html
@@ -22,17 +22,22 @@
                 <span>Ngon như nhà làm</span>
             </div>
             <div class="product">
-                <div class="product__link"><span><a href="../page.html">Sản phẩm</a></span> / <span><a href="../san-pham/banh-khom.html">Bánh khóm</a></span></div>
+                <div class="product__link"><span><a href="../page.html">Sản phẩm</a></span> / <span><a href="banh-bong-lan-truyen-thong.html">Bánh bông lan truyền thống</a></span></div>
                 <div class="product__caption">Chi tiết sản phẩm</div>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
                         <!-- <img class="product__image" src="../../images/logo.png" alt=""> -->
-                        <img class="product__image" src="https://f16.photo.talk.zdn.vn/1270337622367193848/0ee11d4c5efaaea4f7eb.jpg" alt="">
+                        <img class="product__image" src="https://i.ytimg.com/vi/JbuYhdE5b78/hqdefault.jpg" alt="">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12">
-                        <div class="product__name">BÁNH KHÓM</div>
-                        <div class="product__price">180.000đ/ kg</div>
-                        <div class="product__desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus incidunt architecto illum, odit accusantium nemo nostrum, delectus ipsa totam autem ratione repellat necessitatibus! Facilis non accusantium eius illo et hic?
+                        <div class="product__name">Bánh bông lan truyền thống</div>
+                        <div class="product__price">130.000đ/ 100 cái</div>
+                        <div class="product__desc">Món bánh bông lan khuôn nhỏ truyền thống (hay còn gọi là bánh cupcake) là
+                            một loại bánh ngọt được làm chủ yếu từ trứng, bột mì và một số loại phụ liệu khác. Các nguyên
+                            liệu này được đánh bông lên (nên mới gọi là bánh bông lan) rồi đem đi nướng cho nở ra. Bánh bông
+                            lan truyền thống thường có kích thước nhỏ (không giống như nhiều loại bánh bông lan hiện nay
+                            thường được đóng khuôn khá to), ruột bánh bông xốp, hơi nặng, khi ăn có cảm giác khô hơn những
+                            loại bánh bông lan hiện đại. Cách làm bánh bông lan khuôn nhỏ truyền thống cũng khá đơn giản.
                         </div>
                         <div class="product__btn row">
                             <a class="btn col-lg-6 col-sm-12" href="https://www.facebook.com/hieukyo291199" target="_blank">
@@ -55,22 +60,22 @@
             <div class="recomment">
                 <div class="recomment__caption">Sản phẩm gợi ý</div>
                 <div class="row">
-                    <a href="../san-pham/banh-quai-dat.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
+                    <a href="banh-quai-dat.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
                         <img class="recomment__image" src="https://f9.photo.talk.zdn.vn/5208581362142825399/d68cdd219e976ec93786.jpg"></img>
                         <div class="recomment__name">BÁNH QUAI DẠT</div>
                         <div class="recomment__price">130.000đ/ký</div>
                     </a>
-                    <a href="../san-pham/banh-bong-lan-truyen-thong.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
-                        <img class="recomment__image" src="https://i.ytimg.com/vi/JbuYhdE5b78/hqdefault.jpg"></img>
-                        <div class="recomment__name">BÁNH bông lan truyền thống</div>
-                        <div class="recomment__price">130.000đ/ 100 cái</div>
+                    <a href="banh-khom.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
+                        <img class="recomment__image" src="https://f16.photo.talk.zdn.vn/1270337622367193848/0ee11d4c5efaaea4f7eb.jpg"></img>
+                        <div class="recomment__name">BÁNH KHÓM</div>
+                        <div class="recomment__price">180.000đ/ký</div>
                     </a>
-                    <a href="../san-pham/banh-bong-mai.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
+                    <a href="banh-bong-mai.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
                         <img class="recomment__image" src="https://f16.photo.talk.zdn.vn/7761908615636543135/9432619e2228d2768b39.jpg"></img>
                         <div class="recomment__name">BÁNH BÔNG MAI</div>
                         <div class="recomment__price">130.000đ/ký</div>
                     </a>
-                    <a href="../san-pham/banh-hot-dau.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
+                    <a href="banh-hot-dau.html" class="recomment__item col-lg-3 col-md-3 col-sm-12">
                         <img class="recomment__image" src="https://f14.photo.talk.zdn.vn/5172764463511819989/65f8cb5488e278bc21f3.jpg"></img>
                         <div class="recomment__name">BÁNH HỘT ĐẬU</div>
                         <div class="recomment__price">130.000đ/ký</div>
