--- a/banh-bong-lan-truyen-thong.html
+++ b/banh-bong-lan-truyen-thong.html
@@ -7,11 +7,11 @@
     <title>Bánh bông lan truyền thống</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <!-- Font-awesome -->
-    <link rel="stylesheet" href="../../css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
     <!-- CSS -->
-    <link rel="stylesheet" href="../../css/style.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                 <div class="product__caption">Chi tiết sản phẩm</div>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <!-- <img class="product__image" src="../../images/logo.png" alt=""> -->
+                        <!-- <img class="product__image" src="images/logo.png" alt=""> -->
                         <img class="product__image" src="https://i.ytimg.com/vi/JbuYhdE5b78/hqdefault.jpg" alt="">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12">
