--- a/banh-bong-mai.html
+++ b/banh-bong-mai.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bánh bông lan truyền thống</title>
+    <title>Bánh bông mai</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="../../css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <!-- Font-awesome -->
-    <link rel="stylesheet" href="../../css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
     <!-- CSS -->
-    <link rel="stylesheet" href="../../css/style.min.css" />
+    <link rel="stylesheet" href="css/style.min.css" />
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                 <div class="product__caption">Chi tiết sản phẩm</div>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-12">
-                        <!-- <img class="product__image" src="../../images/logo.png" alt=""> -->
+                        <!-- <img class="product__image" src="images/logo.png" alt=""> -->
                         <img class="product__image" src="https://f16.photo.talk.zdn.vn/7761908615636543135/9432619e2228d2768b39.jpg" alt="">
                     </div>
                     <div class="col-lg-8 col-md-8 col-sm-12">
